--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,5 @@ __pycache__/*
 # Logs de crash
 crash.log
 
-# Nix stuff (Hippolyte)
-# flake.nix
-# shell.nix
-# flake.lock
+.ipynb_checkpoints/*
+swiss_data.xlsx
