--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-# Python / terraform cache
+# Python 
 __pycache__/*
+
+# Terraform
 .terraform/*
+*/.terraform/*
+
 *.tfstate
 *.tfstate.backup
 
@@ -10,3 +14,8 @@ __pycache__/*
 
 # Logs de crash
 crash.log
+
+.ipynb_checkpoints/*
+.virtual_documents/*
+
+swiss_data.xlsx
